# mazex

./: Makefile  README_PACKAGE.md  a_maze_ing.py  config.txt  maze.txt  maze_display.py  maze_writer.py  parser.py  pyproject.toml
mazegen/: __init__.py  generator.py
